src/objects/Coffee_Farmer__c.object
<CustomObject>
    <fields>
        <fullName>Nursery_Near_Permanent_Water_Source__c</fullName>
        <description>Nursery Near Permanent Water Source?</description>
        <inlineHelpText>Coffee Nursery Near Permanent Water Source?</inlineHelpText>
        <label>Nursery Near Permanent Water Source?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Operate_Own_a_Coffee_Nursery__c</fullName>
        <label>Operate/Own a Coffee Nursery</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_top_3_cash_crops_other_than_coffee__c</fullName>
        <label>Other top 3 cash crops other than coffee</label>
        <picklist>
            <picklistValues>
                <fullName>Maize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cassava</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Millet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegetables (tomato, cabage etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fruits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Percent_Coffee_Planted_in_rows__c</fullName>
        <label>% of Coffee Plants planted in rows</label>
        <picklist>
            <picklistValues>
                <fullName>100 percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-80 percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-50 percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 10 percent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Numb_2_receive_farmng_SMS_alerts__c</fullName>
        <inlineHelpText>Please provide the phone number on which you would like to receive SMS alerts on farming</inlineHelpText>
        <label>Phone Numb 2 receive farmng SMS alerts</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received_training_on_fertilizer_usage__c</fullName>
        <label>Received training on fertilizer usage</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registered_By__c</fullName>
        <label>Registered By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Coffee Farmers</relationshipLabel>
        <relationshipName>Coffee_Farmers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SMS_CKWs_What_other_form_2_reciv_info__c</fullName>
        <description>Apart from SMS and information from CKWs, what other form would you like to receive the information on coffee production and marketing</description>
        <inlineHelpText>Apart from SMS and information from CKWs, what other form would you like to receive the information on coffee production and marketing</inlineHelpText>
        <label>SMS &amp; CKWs What other form 2 reciv info</label>
        <picklist>
            <picklistValues>
                <fullName>Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochures/leaflets/posters in English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochures or leaflets/posters in Local languages</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Season_fertilizers_manure_are_applied__c</fullName>
        <label>Season fertilizers &amp; manure are applied</label>
        <picklist>
            <picklistValues>
                <fullName>At the beginning of rains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Rain season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Later in the season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Soil_water_conservation_measures__c</fullName>
        <label>Soil &amp; water conservation measures</label>
        <picklist>
            <picklistValues>
                <fullName>Digging trenches or terraces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant grass across the slope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant shade trees or wind breakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spacing_used_when_planting_coffee__c</fullName>
        <inlineHelpText>What was the spacing used while planting your coffee trees</inlineHelpText>
        <label>Spacing used when planting coffee</label>
        <picklist>
            <picklistValues>
                <fullName>3m by 3m (10ft by 10ft)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3m by 4m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2m by 2m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage_fertilizer_manure_are_applied__c</fullName>
        <inlineHelpText>stage of Coffee growing do you apply the fertilizers or manure</inlineHelpText>
        <label>Stage fertilizer &amp; manure are applied</label>
        <picklist>
            <picklistValues>
                <fullName>At planting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 months after planting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At flowering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After harvesting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Stems_left_on_stump_during_pruning__c</fullName>
        <label>Stems left on stump during pruning</label>
        <picklist>
            <picklistValues>
                <fullName>One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-4 stems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 4 stems</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>Coffee Farmers</relationshipLabel>
        <relationshipName>Coffee_Farmers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>The_main_source_of_food_4_your_household__c</fullName>
        <inlineHelpText>What is the main source of food for your household</inlineHelpText>
        <label>The main source of food 4 your household</label>
        <picklist>
            <picklistValues>
                <fullName>From market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Own garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From relatives /neighbors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Times_HHmember_went_day_night_w_out_food__c</fullName>
        <description>(IF Yes) How often did member go hungry day and night in the last 4 weeks/30 days)</description>
        <inlineHelpText>(IF Yes) How often did member go hungry day and night in the last 4 weeks/30 days)</inlineHelpText>
        <label>Times HHmember went day/night w/out food</label>
        <picklist>
            <picklistValues>
                <fullName>Rarely (1-2 times)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes (3-10 times)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Often (more than 10 times)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Times_Hhold_member_slept_hungry_lst_4wks__c</fullName>
        <description>(IF Yes) How often did a household member sleep hungry in the last 4 weeks/30 days)</description>
        <inlineHelpText>(IF Yes) How often did a household member sleep hungry in the last 4 weeks/30 days)</inlineHelpText>
        <label>Times Hhold member slept hungry lst 4wks</label>
        <picklist>
            <picklistValues>
                <fullName>Rarely (1-2 times)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes (3-10 times)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Often (more than 10 times)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Times_applied_manure_in_last_12_months__c</fullName>
        <label>Times applied manure in last 12 months</label>
        <picklist>
            <picklistValues>
                <fullName>Once</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3times</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Times_do_you_weed_your_coffee_in_a_year__c</fullName>
        <label>Times do you weed your coffee in a year</label>
        <picklist>
            <picklistValues>
                <fullName>Once a year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice a year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice a year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 times in a year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Times_use_chemical_on_coffee_last_12mnth__c</fullName>
        <label>Times use chemical on coffee last 12mnth</label>
        <picklist>
            <picklistValues>
                <fullName>Once</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3times</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Times_used_herbicides_in_last_12_months__c</fullName>
        <label>Times used herbicides in last 12 months</label>
        <picklist>
            <picklistValues>
                <fullName>Once</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3times</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Top_3_livestock_household_earns_from__c</fullName>
        <label>Top 3 livestock household earns from</label>
        <picklist>
            <picklistValues>
                <fullName>Cattle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poutlry (chicken, ducks, turkeys etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rabbits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish farming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Total_amount_spent_on_fertilizers__c</fullName>
        <description>total amount you spent in Ugandan shillings for the fertilizers used</description>
        <inlineHelpText>In the last 12 months, what was the total amount you spent in Ugandan shillings for the fertilizers used on your coffee garden[s]?</inlineHelpText>
        <label>Total amount spent on fertilizers</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Coffee_Mainly_Sold__c</fullName>
        <label>Type of Coffee Mainly Sold</label>
        <picklist>
            <picklistValues>
                <fullName>Parchment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiboko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fresh/cherries</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_fertilizer_normally_used__c</fullName>
        <label>Type of fertilizer normally used</label>
        <picklist>
            <picklistValues>
                <fullName>Manure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inorganic/chemical fertilizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both manure and chemical fertilizer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_protective_gear_applying_herbicides__c</fullName>
        <label>Use protective gear applying herbicides</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_records_to_make_informed_decisions__c</fullName>
        <label>Use records to make informed decisions</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Used_fertilizer_manure_in_last_12_months__c</fullName>
        <inlineHelpText>In the last 12 months, did you use fertilizer(s) or manure on your coffee garden[s]</inlineHelpText>
        <label>Used fertilizer manure in last 12 months</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Uses_seasonal_weed_control_methods__c</fullName>
        <label>Uses seasonal weed control methods</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Was_amount_of_fertilizer_sufficient__c</fullName>
        <label>Was amount of fertilizer sufficient</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Was_there_lack_of_food_in_last_4_weeks__c</fullName>
        <inlineHelpText>In the past [4 weeks/30 days] was there a time when there was no food to eat of any kind in your house because of lack of resources to get food?</inlineHelpText>
        <label>Was there lack of food in last 4 weeks</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Were_chemicals_sufficient_last_12months__c</fullName>
        <label>Were chemicals sufficient last 12months</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wet_coffee_processing_method_used__c</fullName>
        <label>Wet coffee processing method used</label>
        <picklist>
            <picklistValues>
                <fullName>Sort to remove unripe beans and dirt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Put in water and remove floating pieces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use pulping machine to pulp the coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After pulping,sort to remove broken ones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fermentation of pulped beans for 2 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wash fermented beans to remove mucilage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry fermented coffee on tarpauline/mat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry fermented coffee on bare ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re sort to remove broken coffee &amp; sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>What_do_you_use_for_desuckering__c</fullName>
        <inlineHelpText>What do you use for de-suckering you coffee trees</inlineHelpText>
        <label>What do you use for de-suckering</label>
        <picklist>
            <picklistValues>
                <fullName>Just pluck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secateurs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pruning saw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bow saw</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_do_you_use_for_pruning_your_coffee__c</fullName>
        <label>What do you use for pruning your coffee</label>
        <picklist>
            <picklistValues>
                <fullName>Pruning saw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bow saw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_info_u_need_on_coffee_prodtn_farmng__c</fullName>
        <description>What kind of information would like to receive on coffee production and marketing</description>
        <inlineHelpText>What kind of information would like to receive on coffee production and marketing</inlineHelpText>
        <label>What info u need on coffee prodtn&amp;farmng</label>
        <picklist>
            <picklistValues>
                <fullName>Soil and water conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manure or fertilizer application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compost making</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water harvesting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training of coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pruning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercropping or cover cropping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pest and diseases control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De-suckering (removal of excess shoots)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction of drying place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harvesting (fly or main crop)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post harvest handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing (wet or dry)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulking and marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record keeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farm business planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market information (prices and buyers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weather information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farming as a business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Whats_yo_level_or_standard_of_certifictn__c</fullName>
        <label>Whats yo level or standard of certifictn</label>
        <picklist>
            <picklistValues>
                <fullName>Fair trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>When_Nursery_Was_Started__c</fullName>
        <label>When Nursery Was Started</label>
        <picklist>
            <picklistValues>
                <fullName>Less than a year back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 to 3 years back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 years back</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>When_do_you_prune_your_coffee__c</fullName>
        <label>When do you prune your coffee</label>
        <picklist>
            <picklistValues>
                <fullName>After harvesting the main crop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any time during the production season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>When_do_you_weed_your_coffee__c</fullName>
        <label>When do you weed your coffee</label>
        <picklist>
            <picklistValues>
                <fullName>During the dry season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>During the rainy season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>When weeds are too many</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>When_shld_the_coffee_tree_cycle_b_change__c</fullName>
        <label>When shld the coffee tree cycle b change</label>
        <picklist>
            <picklistValues>
                <fullName>6 to 7 years old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 years and above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Where_coffee_records_are_kept__c</fullName>
        <label>Where coffee records are kept</label>
        <picklist>
            <picklistValues>
                <fullName>Book/chart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memory/Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On paper sheets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Where_coffee_seedlings_were_got__c</fullName>
        <inlineHelpText>Where did you obtain the coffee seed/seedlings</inlineHelpText>
        <label>Where coffee seedlings were got</label>
        <picklist>
            <picklistValues>
                <fullName>Your own farm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighbors farm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local coffee nursery operator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee company e.g. Kawacom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government (NAADs, UCDA etc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research institutes (NARO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Where_do_u_get_coffee_farming_info__c</fullName>
        <label>Where do u get coffee farming info</label>
        <picklist>
            <picklistValues>
                <fullName>CKWs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grameen Foundation Farmer Call center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspapers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS subscription service/mobile phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word from friends,relatives, neighbors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyers/Traders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ag Extension Agents (NAADs, UCDA, NARO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farmer Group/Cooperative/association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Where_is_coffee_normally_dried__c</fullName>
        <label>Where is coffee normally dried</label>
        <picklist>
            <picklistValues>
                <fullName>Cemented/concrete floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tarpaulins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bare ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raised wire mesh/trays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Who_buys_most_of_your_coffee__c</fullName>
        <label>Who buys most of your coffee</label>
        <picklist>
            <picklistValues>
                <fullName>Coffee cooperative/association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traders/middle men</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>